--- a/war/styles/haze.css
+++ b/war/styles/haze.css
@@ -103,8 +103,13 @@ and the dropdown list below it
 #psi-hourly.chart, 
 #psi-region.chart,
 #pm25.chart {
-	margin: 0 0 1em 0;
+	margin: 0 0 0 0;
 	height: 25em;
+}
+
+#pm25-date-filter {
+	margin: 0 0 1em 0;
+	height: 6em;
 }
 
 #pm25-advisory {
